BUG alignmenton homepage

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,7 +31,9 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
-
+.col-md-4 {
+min-height: 500px;
+}
 .container-narrow > hr {
   margin: 30px 0;
 }
